--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -8,53 +8,106 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/files.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      body {font-family: Arial;}
-
-      /* Style the tab */
-      .tab {
-        overflow: hidden;
-        border: 1px solid #ccc;
-        background-color: #f1f1f1;
-      }
-
-      /* Style the buttons inside the tab */
-      .tab button {
-        background-color: inherit;
-        float: left;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        padding: 14px 16px;
-        transition: 0.3s;
-        font-size: 17px;
-      }
-
-      /* Change background color of buttons on hover */
-      .tab button:hover {
-        background-color: #ddd;
-      }
-
-      /* Create an active/current tablink class */
-      .tab button.active {
-        background-color: #ccc;
-      }
-
-      /* Style the tab content */
-      .tabcontent {
-        display: none;
-        padding: 6px 12px;
-        border: 1px solid #ccc;
-        border-top: none;
-      }
-    </style>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script>
+        async function openFiles(evt, route) {
+            let div;
+            var i, tablinks;
+            var fullRoute = "http://localhost:8080/api/" + route;
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+                tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+            var dataRowsToRemove = document.getElementsByClassName("dataRow");
+            var index = 0;
+            while(index < dataRowsToRemove.length){
+                dataRowsToRemove[index].remove();
+            }
+            fetch(fullRoute)
+                .then(response => response.json())
+                .then(data => data.forEach(addRowTable));
+            evt.currentTarget.className += " active";
+        }
+        function addRowTable(value, index, array) {
+            var tableRow = document.createElement("tr");
+            tableRow.className="dataRow";
+            var username = document.createElement("td");
+            var fileName = document.createElement("th");
+            fileName.scope="row";
+            var date = document.createElement("td");
+            var expiryDate = document.createElement("td");
+            var tag = document.createElement("td");
+            var accessLevel = document.createElement("td");
+            var fileType = document.createElement("td");
+            var download = document.createElement("td");
+            var view = document.createElement("td");
+            fileName.innerText = value['fileName'];
+            username.innerText = value['username'];
+            date.innerText = value['date'];
+            expiryDate.innerText = "N/A";
+            tag.innerText = value['tag'];
+            accessLevel.innerText=value['accessLevel'];
+            fileType.innerText=value['fileType'];
+            var downloadLink = document.createElement("a");
+            downloadLink.href='/file/download/' + value['fileId'];
+            var downloadButton = document.createElement("button");
+            downloadButton.type="button";
+            downloadButton.className = "btn btn-primary";
+            downloadButton.innerText="Download";
+            downloadLink.append(downloadButton);
+            download.append(downloadLink);
+            var viewLink = document.createElement("a");
+            viewLink.href='/file/view/' + value['fileId'];
+            var viewButton = document.createElement("button");
+            viewButton.type="button";
+            viewButton.className = "btn btn-primary";
+            viewButton.innerText="View";
+            viewLink.append(viewButton);
+            view.append(viewLink);
 
+
+
+            tableRow.append(fileName);
+            tableRow.append(username);
+            tableRow.append(date);
+            tableRow.append(expiryDate);
+            tableRow.append(tag);
+            tableRow.append(accessLevel);
+            tableRow.append(fileType);
+            tableRow.append(download);
+            tableRow.append(view);
+            var table = document.getElementById("table");
+            table.append(tableRow);
+        }
+        function niceInputs() {
+            [].forEach.call(document.getElementsByClassName("form-input"), (form_input) => {
+                form_input.getElementsByTagName("input")[0].addEventListener("focus", () => {
+                    form_input.classList.add("active");
+                });
+
+                form_input.getElementsByTagName("input")[0].addEventListener("focusout", () => {
+                    if (form_input.getElementsByTagName("input")[0].value === "") {
+                        form_input.classList.remove("active");
+                    }
+                });
+
+                if (form_input.getElementsByTagName("input")[0].value !== "") {
+                    form_input.classList.add("active");
+                }
+
+            });
+
+        }
+
+        window.onload = () => {
+            niceInputs();
+        }
+    </script>
 </head>
 
 
-<body>
+<body onload="openFiles(event, 'myFiles/user')">
 <div layout:fragment="content">
     <div style="display: inline-flex;width: 87.5%;padding-bottom: 10px">
         <div style="width: 50%;display: flex;justify-content: left;align-items: start;">
@@ -84,10 +137,10 @@
         <div>
             <div class="tab">
                 <button class="tablinks" onclick="openFiles(event, 'myFiles/user')">My Files</button>
-                <button class="tablinks" onclick="openFiles(event, 'myFiles/user')">All Files</button>
+                <button class="tablinks" onclick="openFiles(event, 'allFiles/user')">All Files</button>
                 <button class="tablinks" onclick="openFiles(event, 'myOrgFiles/user')">Organisation Files</button>
                     <button class="tablinks" onclick="openFiles(event, 'myPartnerFiles/user')">Partners Files</button>
-                    <button class="tablinks" onclick="openFiles(event, 'allFiles/user')">Public Files</button>
+                    <button class="tablinks" onclick="openFiles(event, 'publicFiles')">Public Files</button>
                   </div>
 
                   <div id="allDetails">
@@ -112,98 +165,5 @@
     </div>
 </div>
 </body>
-<script>
-  async function openFiles(evt, route) {
-    let div;
-    var i, tablinks;
-    var fullRoute = "http://localhost:8080/api/" + route;
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-    var dataRowsToRemove = document.getElementsByClassName("dataRow");
-    var index = 0;
-    while(index < dataRowsToRemove.length){
-      dataRowsToRemove[index].remove();
-    }
-    fetch(fullRoute)
-                    .then(response => response.json())
-                    .then(data => data.forEach(addRowTable));
-    evt.currentTarget.className += " active";
-  }
-  function addRowTable(value, index, array) {
-    var tableRow = document.createElement("tr");
-    tableRow.className="dataRow";
-    var username = document.createElement("td");
-    var fileName = document.createElement("th");
-    fileName.scope="row";
-    var date = document.createElement("td");
-    var expiryDate = document.createElement("td");
-    var tag = document.createElement("td");
-    var accessLevel = document.createElement("td");
-    var fileType = document.createElement("td");
-    var download = document.createElement("td");
-    var view = document.createElement("td");
-    fileName.innerText = value['fileName'];
-    username.innerText = value['username'];
-    date.innerText = value['date'];
-    expiryDate.innerText = "N/A";
-    tag.innerText = value['tag'];
-    accessLevel.innerText=value['accessLevel'];
-    fileType.innerText=value['fileType'];
-    var downloadLink = document.createElement("a");
-    downloadLink.href='/file/download/' + value['fileId'];
-    var downloadButton = document.createElement("button");
-    downloadButton.type="button";
-    downloadButton.className = "btn btn-primary";
-    downloadButton.innerText="Download";
-    downloadLink.append(downloadButton);
-    download.append(downloadLink);
-    var viewLink = document.createElement("a");
-    viewLink.href='/file/view/' + value['fileId'];
-    var viewButton = document.createElement("button");
-    viewButton.type="button";
-    viewButton.className = "btn btn-primary";
-    viewButton.innerText="View";
-    viewLink.append(viewButton);
-    view.append(viewLink);
 
-
-
-    tableRow.append(fileName);
-    tableRow.append(username);
-    tableRow.append(date);
-    tableRow.append(expiryDate);
-    tableRow.append(tag);
-    tableRow.append(accessLevel);
-    tableRow.append(fileType);
-    tableRow.append(download);
-    tableRow.append(view);
-    var table = document.getElementById("table");
-    table.append(tableRow);
-  }
-  function niceInputs() {
-      [].forEach.call(document.getElementsByClassName("form-input"), (form_input) => {
-          form_input.getElementsByTagName("input")[0].addEventListener("focus", () => {
-              form_input.classList.add("active");
-          });
-
-          form_input.getElementsByTagName("input")[0].addEventListener("focusout", () => {
-              if (form_input.getElementsByTagName("input")[0].value === "") {
-                  form_input.classList.remove("active");
-              }
-          });
-
-          if (form_input.getElementsByTagName("input")[0].value !== "") {
-              form_input.classList.add("active");
-          }
-
-      });
-
-  }
-
-  window.onload = () => {
-      niceInputs();
-  }
-</script>
 </html>
