Changed the api routes

--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -107,7 +107,7 @@
 </head>
 
 
-<body onload="openFiles(event, 'myFiles/user')">
+<body onload="openFiles(event, 'myFiles')">
 <div layout:fragment="content">
     <div style="display: inline-flex;width: 87.5%;padding-bottom: 10px">
         <div style="width: 50%;display: flex;justify-content: left;align-items: start;">
@@ -136,10 +136,10 @@
         </div>
         <div>
             <div class="tab">
-                <button class="tablinks" onclick="openFiles(event, 'myFiles/user')">My Files</button>
-                <button class="tablinks" onclick="openFiles(event, 'allFiles/user')">All Files</button>
-                <button class="tablinks" onclick="openFiles(event, 'myOrgFiles/user')">Organisation Files</button>
-                    <button class="tablinks" onclick="openFiles(event, 'myPartnerFiles/user')">Partners Files</button>
+                <button class="tablinks" onclick="openFiles(event, 'myFiles')">My Files</button>
+                <button class="tablinks" onclick="openFiles(event, 'allFiles')">All Files</button>
+                <button class="tablinks" onclick="openFiles(event, 'myOrgFiles')">Organisation Files</button>
+                    <button class="tablinks" onclick="openFiles(event, 'myPartnerFiles')">Partners Files</button>
                     <button class="tablinks" onclick="openFiles(event, 'publicFiles')">Public Files</button>
                   </div>
 
