Made some changes

--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -79,6 +79,10 @@
                         <input type="text" value="Enter contact's email"/>
                     </div>
                     <div>
+                        <label class="text-secondary" for="subject">Subject:</label><br>
+                        <input th:field="*{subject}" type="text" />
+                    </div>
+                    <div>
                         <label class="text-secondary" for="comment">Comment: </label><br>
                         <input th:field="*{comment}" type="text"/>
                     </div>
