--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/layout/main-layout}">
+
 <head>
     <meta charset="UTF-8">
-    <title>My Files</title>
+    <title>Upload File</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/user-registration.css">
-
+    <link rel="stylesheet" href="/files.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<body>
-
-<div layout:fragment="content">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script>
         function niceInputs() {
             [].forEach.call(document.getElementsByClassName("form-input"), (form_input) => {
@@ -36,68 +34,113 @@
         window.onload = () => {
             niceInputs();
         }
-
     </script>
+</head>
 
-    <div>
+
+<body onload="openFiles(event, 'myFiles')">
+<div layout:fragment="content">
+    <div style="display: inline-flex;width: 87.5%;padding-bottom: 10px">
+        <div style="width: 50%;display: flex;justify-content: left;align-items: start;">
+            <h1>My Organisation Name</h1>
+        </div>
+        <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+            <a href="/myFiles">VIEW MY FILES</a>
+        </div>
+        <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+            <a href="/file">UPLOAD A FILE</a>
+        </div>
+    </div>
+    <div class="--graphium-window">
         <div>
-            <form th:action="@{/upload}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}">
+            <form th:action="@{/file}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}">
 
                 <input th:field="*{fileId}" type="hidden"/>
-                <div class = "grid-container">
-                    <div>
-                        <label class="text-secondary" for="logoFile">File: </label><br>
-                        <input th:field="*{logoFile}" type="file" required/>
+                <div class="row">
+                    <div class = "col-md">
+                        <div class="mb-3">
+                            <label class="text-secondary" for="logoFile">File: </label><br>
+                            <input th:field="*{logoFile}" type="file" required/>
+
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label class="text-secondary" for="logoFileName">Upload Name: </label><br>
-                        <input th:field="*{logoFileName}" type="text" required/>
+                    <div class = "col-md">
+                        <div class="mb-3">
+                            <label class="text-secondary" for="logoFileName">Upload Name: </label><br>
+                            <input th:field="*{logoFileName}" type="text" required/>
+                        </div>
                     </div>
+                </div>
+                <div class = "row">
                     <div class="alert alert-danger" th:if="${errorMessage != null}" th:text="${errorMessage}">File Error</div>
-                    <div>
-                        <label class="form-label text-secondary" for="tag">Tag: </label><br>
-                        <input class="form-check-input" type="radio" id="urgent" name="tag" value="urgent">
-                        <label class="form-check-label" for="urgent">Urgent</label>
-                        <input class="form-check-input" type="radio" id="draft" name="tag" value="draft">
-                        <label class="form-check-label" for="draft">Draft</label>
-                        <input class="form-check-input" type="radio" id="final" name="tag" value="final">
-                        <label class="form-check-label" for="final">Final</label>
+                </div>
+                <div class="row">
+                    <div class = "col-lg-6">
+                        <div class = "form-check form-check-inline">
+                            <div class="mb-3">
+                                <label class="form-label text-secondary" for="tag">Tag: </label><br>
+
+                                <input class="form-check-input" type="radio" id="urgent" name="tag" value="urgent">
+                                <label class="form-check-label" for="urgent">Urgent</label>
+                                <input class="form-check-input" type="radio" id="draft" name="tag" value="draft">
+                                <label class="form-check-label" for="draft">Draft</label>
+                                <input class="form-check-input" type="radio" id="final" name="tag" value="final">
+                                <label class="form-check-label" for="final">Final</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class = "form-check form-check-inline">
-                        <label class="form-label text-secondary" for="accessLevel">Access Level: </label><br>
-                        <input class="form-check-input" type="radio" id="myOrganisation" name="accessLevel" value="myOrganisation">
-                        <label class="form-check-label" for="myOrganisation">My Organisation</label>
-                        <input class="form-check-input" type="radio" id="myPartners" name="accessLevel" value="private">
-                        <label class="form-check-label" for="myPartners">My Partners</label>
-                        <input class="form-check-input" type="radio" id="public" name="accessLevel" value="public">
-                        <label class="form-check-label" for="public">Public</label>
-                        <input class="form-check-input" type="radio" id="private" name="accessLevel" value="private">
-                        <label class="form-check-label" for="private">Private</label>
+                    <div class = "col-lg-6">
+                        <div class = "form-check form-check-inline">
+                            <div class="mb-3">
+                                <label class="form-label text-secondary" for="accessLevel">Access Level: </label><br>
+                                <input class="form-check-input" type="radio" id="myOrganisation" name="accessLevel" value="myOrganisation">
+                                <label class="form-check-label" for="myOrganisation">My Organisation</label>
+                                <input class="form-check-input" type="radio" id="myPartners" name="accessLevel" value="private">
+                                <label class="form-check-label" for="myPartners">My Partners</label>
+
+
+                                <input class="form-check-input" type="radio" id="public" name="accessLevel" value="public">
+                                <label class="form-check-label" for="public">Public</label>
+                                <input class="form-check-input" type="radio" id="private" name="accessLevel" value="private">
+                                <label class="form-check-label" for="private">Private</label>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <label class="text-secondary">Share with someone:</label><br>
-                        <input type="text" value="Enter contact's email"/>
+                </div>
+                <div class="row">
+                    <div class = "col-md-6">
+                        <div class="mb-3">
+                            <label class="text-secondary" for="subject">Subject:</label><br>
+                            <input th:field="*{subject}" type="text" />
+
+                        </div>
                     </div>
-                    <div>
-                        <label class="text-secondary" for="subject">Subject:</label><br>
-                        <input th:field="*{subject}" type="text" />
+                    <div class = "col-md-6">
+                        <div class="mb-3">
+                            <label class="text-secondary" for="comment">Comment: </label><br>
+                            <input th:field="*{comment}" type="text"/>
+                        </div>
                     </div>
-                    <div>
-                        <label class="text-secondary" for="comment">Comment: </label><br>
-                        <input th:field="*{comment}" type="text"/>
-                    </div>
-                    <div>
-                        <button class="btn btn-danger btn-lg">Cancel</button>
-                    </div>
-                    <div>
-                        <button class="btn btn-dark btn-lg">Submit</button>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class = "d-flex justify-content-end">
+                                <button class="btn btn-danger btn-lg">Cancel</button>
+                            </div>
+
+                        </div>
+                        <div class="col-sm">
+                            <button class="btn btn-dark btn-lg">Submit</button>
+                        </div>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 
-
+</div>
 </div>
 </body>
+
 </html>
