--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -38,7 +38,7 @@
 </head>
 
 
-<body onload="openFiles(event, 'myFiles')">
+<body>
 <div layout:fragment="content">
     <div style="display: inline-flex;width: 87.5%;padding-bottom: 10px">
         <div style="width: 50%;display: flex;justify-content: left;align-items: start;">
@@ -53,7 +53,7 @@
     </div>
     <div class="--graphium-window">
         <div>
-            <form th:action="@{/file}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}">
+            <form th:action="@{/upload}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}">
 
                 <input th:field="*{fileId}" type="hidden"/>
                 <div class="row">
