--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -18,7 +18,6 @@
             var fileName = document.createElement("th");
             fileName.scope="row";
             var date = document.createElement("td");
-            // var expiryDate = document.createElement("td");
             var tag = document.createElement("td");
             var accessLevel = document.createElement("td");
             var fileType = document.createElement("td");
@@ -31,7 +30,6 @@
             fileName.innerText = value['fileName'];
             username.innerText = value['username'];
             date.innerText = value['date'];
-            // expiryDate.innerText = "N/A";
             tag.innerText = value['tag'];
             accessLevel.innerText=value['accessLevel'];
             fileType.innerText=value['fileType'];
@@ -63,7 +61,6 @@
             modifyButton.type="button";
             modifyButton.className = "btn btn-primary";
             modifyButton.innerText="Modify";
-            modifyButton.id = "modify";
             modifyLink.append(modifyButton);
             modify.append(modifyLink);
 
@@ -84,9 +81,11 @@
         }
         function loadTable(evt,route){
             openFiles(evt,route);
-            const modifySection = document.getElementsByClassName("modifyBlock");
-            var item = modifySection.item(1);
-            console.log(item);
+            var modifyButtonsToRemove = document.getElementsByClassName("modifyBlock");
+            console.log(modifyButtonsToRemove);
+            for (let item of modifyButtonsToRemove) {
+                console.log(item.className);
+            }
         }
 
         async function openFiles(evt, route) {
