--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -15,6 +15,7 @@
             var tableRow = document.createElement("tr");
             tableRow.className="dataRow";
             var username = document.createElement("td");
+            var organisation = document.createElement("td");
             var fileName = document.createElement("th");
             fileName.scope="row";
             var date = document.createElement("td");
@@ -29,6 +30,7 @@
             modify.className =  "modifyBlock";
             fileName.innerText = value['fileName'];
             username.innerText = value['username'];
+            organisation.innerText=value['organisationName']
             date.innerText = value['date'];
             tag.innerText = value['tag'];
             accessLevel.innerText=value['accessLevel'];
@@ -66,6 +68,7 @@
             }
             tableRow.append(fileName);
             tableRow.append(username);
+            tableRow.append(organisation);
             tableRow.append(date);
             tableRow.append(subject);
             tableRow.append(comment);
@@ -105,7 +108,6 @@
 
             request.onload = function () {
                 // Begin accessing JSON data here
-                console.log(request.responseText);
                 var files = JSON.parse(request.responseText);
                 for (let j = 0; j < files.length; j++) {
                     addRowTable(files[j], route);
@@ -193,6 +195,7 @@
                           <tr>
                             <th scope="col">File Name</th>
                             <th scope="col">Author</th>
+                              <th scope="col">Organisation</th>
                             <th scope="col">Date</th>
                               <th scope="col">Subject</th>
                               <th scope="col">Comment</th>
